[tool.poetry]
name = "deltalake-test"
version = "0.1.0"
description = ""
authors = ["Oliver Treichel <oliver.treichel@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
deltalake = "^0.10.2"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
